# ROMOCOTOOL

./: README.md
c++Project/cmake/src/: CMakeLists.txt  linked_origin.h
c++Project/cmake/src/include/cmake/: A.h  B.h  C.h  linked.h
c++Project/cmake/src/src/: A.cpp  B.cpp  C.cpp  main.cpp
c++Project/cmakeProject/src/: CMakeLists.txt
c++Project/cmakeProject/src/include/: IPOPT.h  NLP.h  OCP.h  linkedFunction.h
c++Project/cmakeProject/src/src/: IPOPT.cpp  NLP.cpp  OCP.cpp  optTraj.cpp
conProb/: Poly5Position.m  analyse_3310.slx
example/FixedLegModel/: getSysDynMatrices.m  getSysDynamics.m  mainFixedLegModel.m  modelisation.m
examples/FixedLegModel/: Mat2Rpy.m  RotX.m  RotY.m  getForwardKinematics.m  getJointAxesDef.m  getKinematicChainDef.m  getRobotStructure.m  mainFixedLegModel.m  mainFixedLegModelSaved.m  robotmodellingTest.m
examples/HumanLegModel/: getKinematicChainDef.m  mainFixedBaseLegModel.m
pythonProject/: IPOPT.py  NLP.py  OCP.py  ocpClassTest.py  sympyTest.py
roModTool/: RoModTool.m  mainRoModTool.m
roModTool/saved/: FixedBasedRoModToolLE.m  getForwardKinematics.m
roModTool/src/: FixedBaseRoModTool.m  FixedBaseRoModTool.m~  RoModTool.m  RoModTool_new.m  getForwardKinematics.m  getKinematicChainDefSample.m  getMatlabFunction.m  getRoModToolSysParams.m  getRobotEnergy.m  getRobotStructure.m  getSymPhysicalParams.m  getSymStateVariable.m  getSystemDynamics.m  mainRoModTool.m  mainRoModToolTest.m
src/modTools/: OptConToolsMod.m  testOptConToolsMod.m
src/roModTool/: RoModTool.m  testRoModTool.m
wdcProb/: MotorDynamicsModel.m
(+121 files in other folders)
